<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:background="@color/grey_f3f3f3">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/more_btn_about"
            style="@style/dailogmoreStyle"
            android:drawableTop="@mipmap/about"
            android:text="@string/about" />
        <Button
            android:id="@+id/more_btn_setting"
            style="@style/dailogmoreStyle"
            android:drawableTop="@mipmap/set_up"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:text="@string/setting" />
        <Button
            android:id="@+id/more_btn_record"
            style="@style/dailogmoreStyle"
            android:drawableTop="@mipmap/bill_details"
            android:text="@string/history_record" />


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="15dp"
        android:weightSum="111">

        <Button
            android:id="@+id/more_btn_info"
            style="@style/dailogmoreStyle"
            android:drawableTop="@mipmap/billing_records"
            android:text="@string/account_info"
            android:layout_marginRight="30dp"/>
    </LinearLayout>
    <ImageView
        android:id="@+id/dialog_more_iv_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/close"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"/>


</LinearLayout>